feat: GetUsersByTeam
